# dingusppc

./: .gitignore  ACTUAL_NEW_FUNCTIONALITY.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_SUMMARY.md  CORRECTED_SUMMARY.md  CREATIVE_SOLUTION_IMPLEMENTED.md  EXECUTION_TESTS_COMPLETE.md  FINAL_PR_SUMMARY.md  FINAL_VALIDATION_COMPLETE.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_PROGRESS.md  PHASE_1_2_COMPLETE.md  PHASE_3_OPTIONS.md  PMC1_ANALYSIS.md  PMC1_CORRECTED_ANALYSIS.md  PMC1_CREATIVE_SOLUTIONS.md  README.md  SPR_ROADMAP.md  ULTIMATE_IMPLEMENTATION_COMPLETE.md  WHATS_MISSING.md  WHY_SPR_REGISTERS_WERE_UNIMPLEMENTED.md  main.cpp  main_js.cpp  main_sdl.cpp  run_fuzzer.sh  vcpkg.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci-fork.yml  clang-tidy.yml  cmake.yml  codeql.yml  copilot-setup-steps.yml  emscripten.yml  fuzz-extended.yml  fuzz.yml  sanitizers.yml
_codeql_build_dir/: CMakeCache.txt  Makefile
_codeql_build_dir/core/: Makefile
_codeql_build_dir/cpu/ppc/: Makefile
_codeql_build_dir/debugger/: Makefile
_codeql_build_dir/devices/: Makefile
_codeql_build_dir/machines/: Makefile
_codeql_build_dir/utils/: Makefile
benchmark/: bench1.cpp  bench2.cpp  bench_api.h  bench_checksum.cpp  bench_common.cpp  bench_common.h  bench_dispatch.cpp  bench_driver.cpp
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja
build_clang/: CMakeCache.txt  CTestTestfile.cmake  Makefile
build_clang/core/: Makefile
build_clang/cpu/ppc/: Makefile
build_clang/debugger/: Makefile
build_clang/devices/: Makefile
build_clang/machines/: Makefile
build_clang/utils/: Makefile
build_devtest/: CMakeCache.txt  Makefile
build_devtest/core/: Makefile
build_devtest/cpu/ppc/: Makefile
build_devtest/debugger/: Makefile
build_devtest/devices/: Makefile
build_devtest/machines/: Makefile
build_devtest/utils/: Makefile
core/: CMakeLists.txt  hostevents.h  hostevents_js.cpp  hostevents_sdl.cpp  timermanager.cpp  timermanager.h
cpu/ppc/: CMakeLists.txt  poweropcodes.cpp  ppcdisasm.cpp  ppcdisasm.h  ppcemu.h  ppcexec.cpp  ppcfpopcodes.cpp  ppcmmu.cpp  ppcopcodes.cpp
cpu/ppc/test/: ppctests.cpp  test_bigmac_net.cpp  test_breakpoint_standalone.cpp  test_dabr_execution.cpp  test_iabr_execution.cpp  test_mace_net.cpp  test_perfcounter_standalone.cpp  test_pmc1_execution.cpp  test_spr_extended_standalone.cpp  test_spr_phase3_standalone.cpp  test_spr_standalone.cpp  testdisasm.cpp
debugger/: debugger.cpp
devices/: CMakeLists.txt
devices/common/: dbdma.cpp  dbdma.h  ofnvram.cpp  viacuda.cpp  viacuda.h
devices/common/adb/: adbbus.cpp  adbdevice.cpp
devices/common/ata/: atahd.cpp  atapicdrom.cpp  cmd646.cpp  idechannel.cpp
devices/common/nubus/: nubusutils.cpp  nubusutils.h
devices/common/pci/: bandit.cpp  pcihost.cpp
devices/common/scsi/: mesh.cpp  sc53c94.cpp  scsibus.cpp  scsicdrom.cpp  scsihd.cpp
devices/ethernet/: bigmac.cpp  bigmac.h  mace.cpp  mace.h
devices/floppy/: swim3.cpp
devices/ioctrl/: amic.cpp  amic.h  grandcentral.cpp  maciobase.cpp  maciotwo.cpp
devices/memctrl/: memctrlbase.cpp  platinum.cpp
devices/serial/: chario.cpp
devices/sound/: awacs.cpp  soundserver_cubeb.cpp  soundserver_js.cpp
devices/test/: aspen_tests.csv  gossamerid_tests.csv  hammerhead_tests.csv  hmc_tests.csv  machineid_tests.csv  psx_tests.csv  test_aspen.cpp  test_athens.cpp  test_boardreg.cpp  test_devices.cpp  test_devices.h  test_hammerhead.cpp  test_hmc.cpp  test_i2cprom.cpp  test_machineid.cpp  test_psx.cpp  test_spdsdram.cpp
devices/video/: control.cpp  display_js.cpp  display_sdl.cpp  pdmonboard.cpp  sixty6.cpp  taos.cpp
docs/: tracing.md
fuzz/: README.md  fuzz_disasm.cpp  fuzz_mmio_device.cpp  fuzz_mmio_devices.h  fuzz_mmio_extras.cpp  fuzz_pci_cfg.cpp  fuzz_ppc_disasm.cpp  fuzz_ppc_insn.dict  fuzz_ppc_sequence.cpp  fuzz_ppc_sequence.dict  fuzz_ppc_single_instruction.cpp  libcxx_shims.cpp
machines/: machinebase.cpp  machinebase.h  machinebondi.cpp  machinecatalyst.cpp  machinefactory.cpp  machinegazelle.cpp  machinegossamer.cpp  machinepdm.cpp  machinepippin.cpp  machineproperties.h  machinetnt.cpp  machineyosemite.cpp
scripts/: make_seeds.py  patch_single_fpresult.py
tests/: CMakeLists.txt  nubuscrc_impl.cpp  test_adb.cpp  test_adbdefs.cpp  test_atadefs.cpp  test_athens.cpp  test_audioprocessor.cpp  test_banditdefs.cpp  test_bitops.cpp  test_checksums.cpp  test_coresignal.cpp  test_dbdma.cpp  test_displayid.cpp  test_dmacore.cpp  test_endianswap.cpp  test_floppydefs.cpp  test_hwcomponent.cpp  test_i2c.cpp  test_i2cprom.cpp  test_machine_api.cpp  test_machineprops.cpp  test_mathutils.cpp  test_memaccess.cpp  test_mmiodevice.cpp  test_mmudefs.cpp  test_nvram.cpp  test_pci_cfg.cpp  test_pcicfglog.cpp  test_pciconv.cpp  test_pcidevice.cpp  test_pixconv.cpp  test_ppcdisasm.cpp  test_properties.cpp  test_scsidefs.cpp  test_thread_safety.cpp  test_timermanager.cpp  test_trace.cpp  test_utils.cpp  test_viacuda.cpp  test_videodefs.cpp
tests/net/: mock_error_backend.h  test_bigmac_net.cpp  test_dbdma_net.cpp  test_ether_backends.cpp  test_mace_net.cpp  test_mmu_stub.cpp  test_net_main.cpp
trace/: CMakeLists.txt  ppc_trace.h  tracemanager.cpp  tracemanager.h
utils/: CMakeLists.txt  imgfile_js.cpp
utils/net/: ether_backend.h  ether_backend_loopback.cpp  ether_backend_null.cpp  ether_backend_pcap.cpp  ether_backend_slirp.cpp  ether_backend_tap.cpp  ether_backend_vmnet.cpp
zdocs/users/: manual.md  networking.md
